# PIKS3D

./: .gitattributes  .gitignore  CMakeLists.txt  Field_000.vtk  LICENSE  Makefile  README.md  flow.F90  fun.F90  hello.F90  linearised_BGK_D3Q64_v10_original.F90  linearised_BGK_D3Q64_v14.f90  linearised_BGK_D3Q64v10.f90  log  main.F90  mpiParams.F90  physicalGrid.F90  solver.F90  test.F90  test.vtk  testhybrid.F90  testmod.F90  two_box.lpk  velocityGrid.F90
conf/: CMakeLists.txt  CMakeLists.txt.minh  Makefile  bashrc  createBox.F90  createSphere.F90  linearised_BGK_D3Q64_v14.f90  linearised_BGK_D3Q64_v14_singleSphere.f90  para.in
scripts/: lowerCase.txt  toClowerCase.sh
src/: Makefile  flow.F90  gaussHermite.F90  main.F90  mpiParams.F90  output.F90  parameters.F90  physicalGrid.F90  solver.F90  velocityGrid.F90
tutorials/: README.md
tutorials/cubicSpherePacking/: para.in  singleSphere100^3.raw
tutorials/sandPack/: job.pbs  para.in
